Bug #12813 Instance Manager: START/STOP INSTANCE commands accept a list as argument
Submitted: 25 Aug 2005 21:31 Modified: 28 Feb 2006 3:48
Reporter: Alexander Nozdrin
Status: Closed
Category:Instance Manager Severity:S3 (Non-critical)
Version:5.0 OS:
Assigned to: Bugs System Target Version:

[25 Aug 2005 21:31] Alexander Nozdrin
Description:
START/STOP INSTANCE commands are supposed to take an instance identifier as argument. Now
they accept a list of identifiers as argument, while the action is performed only on the
first item.

How to repeat:
START INSTANCE mysqld1, mysqld2, mysqld3;
STOP INSTANCE mysqld1, mysqld2, mysqld3;
[14 Feb 2006 1:07] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/2556
[18 Feb 2006 1:26] Petr Chardin
pushed into 5.0.19
[28 Feb 2006 3:43] Paul DuBois
Noted in 5.0.19 changelog.

Instance Manager erroneously accepted a list of instance
identifiers for the <literal>START INSTANCE</literal> and
<literal>STOP INSTANCE</literal> commands (should accept only
a single identifier). (Bug #12813)