fix Bug#12813 "Instance Manager: START/STOP INSTANCE                commands accept a list as argument"